remove unnecessary text

--- a/others.html
+++ b/others.html
@@ -83,7 +83,7 @@
     <br>
 
     <div class="alert alert-info">
-        <h5>📱 Looking for more brands?</h5>
+        <h5>Looking for more brands?</h5>
         <p class="mb-2">For a complete list of all smartphone manufacturers and their devices:</p>
         <a href="https://www.gsmarena.com/makers.php3" target="_blank" class="btn btn-primary">
             Visit GSMArena - All Phone Brands
@@ -242,7 +242,7 @@
     <br><br>
 
     <div class="alert alert-secondary">
-        <h5>🏆 Check out our awards!</h5>
+        <h5>Check out our awards!</h5>
         <p class="mb-2">See which phones won our 2025 awards:</p>
         <a href="2025awards.html" class="btn btn-secondary">View 2025 Awards</a>
     </div>
@@ -251,4 +251,5 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
